Fixed services image spacing

--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ ul{
     grid-column: 2 / 2;
     grid-row: 1 / 2;
     max-height: 265px;
+    padding-bottom: 6px;
   }
   
   .third {
